# lightrace-cli

./: .gitignore  .goreleaser.yml  LICENSE  README.md  go.mod  go.sum  main.go
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-npm.yml  publish-pypi.yml
cmd/: db.go  init.go  logs.go  root.go  start.go  status.go  stop.go  version.go
internal/config/: config.go
internal/docker/: docker.go  progress.go
internal/gateway/: caddyfile.go
internal/prompt/: prompt.go
internal/start/: start.go
npm/: package.json
npm/scripts/: postinstall.js
pypi/: pyproject.toml
pypi/lightrace_cli/: __init__.py
