[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lightrace-cli"
version = "0.0.0"
description = "CLI for self-hosting Lightrace — LLM tracing and observability"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "SKE Labs" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/SKE-Labs/lightrace-cli"
Repository = "https://github.com/SKE-Labs/lightrace-cli"
Issues = "https://github.com/SKE-Labs/lightrace-cli/issues"

[project.scripts]
lightrace = "lightrace_cli:main"
